<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>io.jans</groupId>
	<artifactId>jans-orm-parent</artifactId>
	<packaging>pom</packaging>
	<version>1.0.6-SNAPSHOT</version>
	<name>orm</name>

	<prerequisites>
		<maven>${maven.min-version}</maven>
	</prerequisites>

    <distributionManagement>
	  <repository>
          <id>github</id>
          <name>GitHub Packages</name>
          <url>https://maven.pkg.github.com/JanssenProject/jans</url>
      </repository>
    </distributionManagement>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.min-version>3.0.3</maven.min-version>
		<janssen.version>1.0.6-SNAPSHOT</janssen.version>

		<jacoco.version>0.8.7</jacoco.version>

		<sonar.projectKey>JanssenProject_jans-orm</sonar.projectKey>
		<sonar.moduleKey>${project.groupId}:${project.artifactId}</sonar.moduleKey>
		<sonar.organization>janssenproject</sonar.organization>
		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
	</properties>

	<scm>
		<url>https://github.com/JanssenProject/jans-orm</url>
		<connection>scm:git:git://github.com/JanssenProject/jans-orm.git</connection>
		<developerConnection>scm:git:git@github.com:JanssenProject/jans-orm.git</developerConnection>
	</scm>

	<modules>
		<module>util</module>
		<module>annotation</module>
		<module>filter</module>
		<module>model</module>
		<module>core</module>
		<module>ldap</module>
		<module>couchbase</module>
		<module>couchbase-libs</module>
 		<module>sql</module>
 		<module>spanner</module>
 		<module>spanner-libs</module>
		<module>hybrid</module>
		<module>cdi</module>
		<module>standalone</module>
		<module>ldap-sample</module>
		<module>couchbase-sample</module>
 		<module>sql-sample</module>
 		<module>spanner-sample</module>
	</modules>

	<repositories>
		<repository>
			<id>mavencentral</id>
			<name>maven central</name>
			<url>https://repo1.maven.org/maven2</url>
		</repository>
		<repository>
			<id>jans</id>
			<name>Janssen project repository</name>
			<url>https://maven.jans.io/maven</url>
		</repository>
		<repository>
			<id>bouncycastle</id>
			<name>Bouncy Castle</name>
			<url>https://repo1.maven.org/maven2/org/bouncycastle</url>
		</repository>
	</repositories>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>io.jans</groupId>
				<artifactId>jans-bom</artifactId>
				<version>${janssen.version}</version>
				<scope>import</scope>
				<type>pom</type>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>2.3.2</version>
					<configuration>
						<source>1.8</source>
						<target>1.8</target>
						<encoding>UTF-8</encoding>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-source-plugin</artifactId>
					<version>2.1.2</version>
					<executions>
						<execution>
							<id>attach-sources</id>
							<goals>
								<goal>jar</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-checkstyle-plugin</artifactId>
					<version>3.0.0</version>
					<configuration>
						<configLocation>checkstyle.xml</configLocation>
						<encoding>UTF-8</encoding>
						<consoleOutput>true</consoleOutput>
						<failsOnError>true</failsOnError>
						<linkXRef>false</linkXRef>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.jacoco</groupId>
					<artifactId>jacoco-maven-plugin</artifactId>
					<version>${jacoco.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-assembly-plugin</artifactId>
					<version>3.3.0</version>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<reporting>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-checkstyle-plugin</artifactId>
				<version>3.0.0</version>
				<reportSets>
					<reportSet>
						<reports>
							<report>checkstyle</report>
						</reports>
					</reportSet>
				</reportSets>
			</plugin>
		</plugins>
	</reporting>
</project>